# Translation-Service-Challenge

./: .gitignore  Dockerfile  README.md  db.py  docker-compose.yml  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py  translate.js  translate.py  translate_client.py
tests/: test_routes.py
