[tool.poetry]
name = "dictionary"
version = "0.1.0"
description = ""
authors = ["Aleksandr Nemirov <anemirov@ivi.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pymongo = "^4.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
